tests/parsing/smtlib/v2.7/errors/051_check-sat-assuming_unclosed_1.smt2
(set-logic ALL)
(check-sat-assuming () _)
